# chinese-chess-python-desktop

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/plans/: 2026-03-09-chinese-chess-design.md  2026-03-09-chinese-chess-implementation.md  2026-03-11-color-selection-design.md  2026-03-11-color-selection-implementation.md
openspec/changes/: prd1.0.md
openspec/changes/archive/2026-03-11-chinese-chess-v1/: design.md  proposal.md
openspec/changes/archive/2026-03-11-chinese-chess-v1/specs/ai-player/: spec.md
openspec/changes/archive/2026-03-11-color-selection/: requirement.md  tasks.md
openspec/changes/chinese-chess-v1/: tasks.md
openspec/changes/color-selection/: design.md  proposal.md
openspec/specs/board-and-rules/: spec.md
openspec/specs/color-selection/: spec.md
openspec/specs/gui/: spec.md
src/ai/: __init__.py  engine.py  evaluate.py
src/game/: __init__.py  board.py  pieces.py  rules.py
src/gui/: ChessBoard.qml  ColorSelectionDialog.qml  Piece.qml  __init__.py  bridge.py  main.qml
tests/: __init__.py  test_ai.py  test_board.py  test_bridge.py  test_integration.py  test_move_generator.py  test_pieces.py
